--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-etherscan": "^2.1.3",
     "@chainlink/contracts": "^0.1.6",
+    "@nomiclabs/hardhat-etherscan": "^2.1.3",
     "@openzeppelin/contracts": "^3.4.1",
     "@truffle/hdwallet-provider": "1.2.3",
     "@typechain/ethers-v5": "^7.0.1",
     "dotenv": "^10.0.0",
     "hardhat-typechain": "^0.3.5",
+    "nft.storage": "^4.0.1",
     "ts-generator": "^0.1.1",
     "typechain": "^5.1.0"
   },
